--- a/MobiV/Gemfile
+++ b/MobiV/Gemfile
@@ -3,15 +3,14 @@ git_source(:github) { |repo| "https://github.com/#{repo}.git" }
 
 ruby '2.6.5'
 
+#Font Awesome for icons
+gem 'font-awesome-sass', '~> 5.12.0'
 # Bootstrap UI Framework
 gem 'bootstrap', '~> 4.0.0'
-
-gem 'jquery-rails'
-
 # Bundle edge Rails instead: gem 'rails', github: 'rails/rails'
 gem 'rails', '~> 6.0.2', '>= 6.0.2.1'
-# Use sqlite3 as the database for Active Record
-gem 'sqlite3', '~> 1.4'
+# Use mysql as the database for Active Record
+gem 'mysql2', '>= 0.4.4'
 # Use Puma as the app server
 gem 'puma', '~> 4.1'
 # Use SCSS for stylesheets
