--- a/MobiV/test/fixtures/orders.yml
+++ b/MobiV/test/fixtures/orders.yml
@@ -1,11 +1,11 @@
 # Read about fixtures at https://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
-  first_name: MyString
-  last_name: MyString
-  sub_total: 9.99
+  order_date: 2020-04-02 02:52:15
+  user: one
+  status: MyString
 
 two:
-  first_name: MyString
-  last_name: MyString
-  sub_total: 9.99
+  order_date: 2020-04-02 02:52:15
+  user: two
+  status: MyString
